@@ -24,12 +24,14 @@ lib_LIBRARIES = libhurd-btree.a
 includehurddir = $(includedir)/hurd
 includehurd_HEADERS = btree.h
 
-AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/libc-parts -D_GNU_SOURCE
+COMMON_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/libc-parts \
+	-D_GNU_SOURCE
+libhurd_btree_a_CPPFLAGS = $(COMMON_CPPFLAGS) -DNCHECKS
 libhurd_btree_a_SOURCES = btree.h btree.c
 
 TESTS = btree-test
 
 check_PROGRAMS = btree-test
 btree_test_SOURCES = btree-test.c btree.h btree.c
-btree_test_CPPFLAGS = -DS_PRINTF=printf $(AM_CPPFLAGS)
+btree_test_CPPFLAGS = -DS_PRINTF=printf $(COMMON_CPPFLAGS)
 
